# RAG-Metrics

./: .gitignore  AGENTS.md  QUICKSTART-FRONTEND.md  README.md  inspect_metadata.py  rag_pipeline.ipynb
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/api/: main.py
backend/src/api/routes/: health.py  metrics.py
backend/src/models/: dataset.py  metric_result.py
backend/src/utils/: error_handlers.py  logger.py
frontend/: .env.example  .eslintrc.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/Header/: Header.css  Header.tsx
frontend/src/pages/: Home.tsx  Results.tsx  SavedAnalyses.tsx
specs/001-rag-metrics-website/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-metrics-website/checklists/: requirements.md
specs/001-rag-metrics-website/contracts/: README.md  openapi.yaml
